python for model tables and links

--- a/chapter_movies.tex
+++ b/chapter_movies.tex
@@ -1,9 +1,14 @@
 
 \section{Summary}
-The Movies page has the most functionality and most complex functionality. Also, to avoid any confusion, there’s nothing film-related here. A “movie” is the sequencing which has taken place on a single stage within a sequencing run. Up to four independent stages make up a “run”. Now that that’s out of the way….
+The Movies page has the most functionality and most complex functionality. Also, 
+to avoid any confusion, there's nothing film-related here. A ``movie'' is the 
+sequencing which has taken place on a single stage within a sequencing run. Up 
+to four independent stages make up a ``run''. Now that that's out of the way….
 
 \section{Table}
-Each row in the movie table will have a column for each of the following properties belonging to the movie object. Rows of movie data should be sorted by date. The cells of some columns serve as buttons to open a pop-up window.
+Each row in the movie table will have a column for each of the following properties 
+belonging to the movie object. Rows of movie data should be sorted by date. The 
+cells of some columns serve as buttons to open a pop-up window.
 
 \section{Pop-up windows}
 \subsection{Movies on run run\_id}
