--- a/chapter_globus_apis.tex
+++ b/chapter_globus_apis.tex
@@ -18,7 +18,8 @@ The Movies page will need to initiate file transfers via the Globus Transfer API
 can be accomplished by submitting requests for files on the DNASC Globus collection 
 to be transferred to a Globus collection on a DNASC PC (or the opposite direction).
 
-It may be useful if the DNASC website could redirect the user to the Globus web app.
+It may be useful if the DNASC website could \linkglobusbrowseendpoint{redirect} the user 
+to the Globus web app.
 
 \section{Task management}
 From the \linkglobustaskmonitoring{documentation}, ``Transfer and delete are asynchronous 
