--- a/preamble.sty
+++ b/preamble.sty
@@ -1,9 +1,11 @@
 \usepackage{hyperref}
 \usepackage[normalem]{ulem}
 \usepackage{booktabs} % replace \hline with \toprule, \midrule, \bottomrule, and much more
+\usepackage{tabularx}
+\usepackage{enumitem}
 
 \hypersetup{
-    % colorlinks=true,
+    colorlinks=true,
     linkcolor=blue,
     urlcolor=blue
 }
