mini update: analysis.json, tiny more content

--- a/chapter_movies.tex
+++ b/chapter_movies.tex
@@ -31,7 +31,14 @@ to determine which users have access to this movie. Then, use this information
 to filter out the appropriate \texttt{user} records.
 
 \subsection{View movie directory}
+
+Provide a link to open the Globus web app. See \linkglobusbrowseendpoint{link}.
+
 \subsection{Analyses associated with movie movie\_id}
+
+A pop-up window displaying a table of all analyses associated with the movie. An analysis 
+is a dataset derived from primary movie data.
+
 \section{Actions}
 \subsection{Share}
 \subsection{Download}
