all content added. missing user and xfer tables

--- a/main.tex
+++ b/main.tex
@@ -17,20 +17,10 @@
 \input{chapter_movies.tex}
 
 \chapter{Active Transfers page}
-\section{summary}
-\section{task listing}
-\section{Failed transfers}
+\input{chapter_active_transfers.tex}
 
 \chapter{Users page}
-\section{Summary}
-\section{Table}
-\section{Pop-up windows}
-\subsection{Movies shared with user\_name}
-\subsection{Movie details}
-\section{Actions}
-\subsection{Create new user}
-\subsection{Delete user}
-\subsection{Edit user}
+\input{chapter_users.tex}
 
 \chapter{Drives page}
 \section{Summary}
