Add backup device prop to movie model

--- a/table/movie_view.tex
+++ b/table/movie_view.tex
@@ -11,5 +11,6 @@
  Sample Name   & \texttt{sample\_name}     & n/a                                     \\
  Shares        & \texttt{num\_shares}      & Users With Access To Movie \texttt{movie\_id}     \\
  Analyses      & \texttt{num\_analyses}    & Analyses Associated With Movie \texttt{movie\_id} \\
+ Backup Device & \texttt{backup\_device}   & n/a                                     \\
 \bottomrule
 \end{tabularx}
