Rename intro, send chapter on Globus to appendix

--- a/chapter_introduction.tex
+++ b/chapter_introduction.tex
@@ -1,7 +1,10 @@
+% Chapter: Introduction
 
-The BYU DNA Sequencing Center (DNASC) provides state-of-the-art DNA sequencing services to internal and external 
-users. An essential part of the provision of these services is the sharing and storage of files generated in the 
-center.
+\section{DNASC website expansion}
+
+The BYU DNA Sequencing Center (DNASC) provides state-of-the-art DNA sequencing services 
+to internal and external users. An essential part of the provision of these services is 
+the sharing and backup of files generated in the center.
 
 The DNASC website \linklsdnasc{lsdnasc.byu.edu} will get three new pages, accessible 
 through links in a dropdown listing called ``Data''. Each page will consist mainly of 
@@ -19,18 +22,9 @@ includes functions such as table filters and a search bar.
 These modified screenshots of the ``Plate History'' page 
 demonstrate how each new page should look.
 
-\section{Aims of this specification}
+\section{Document organization and content}
 
-This spec aims to:
-
-\begin{itemize}
-  \item Detail all aspects of the expanded website and its features.
-  \item Provide instructions from a high level.
-\end{itemize}
-
-\section{References to externally documented terms}
-
-This specification will detail essential data models and logic. A special font will be used to indicate a model 
-or function defined in this specification, or endpoints or properties belonging to a Globus API. Links to API 
-documentation are also provided.
-
+The chapters of this document will describe of the appearance and purpose of each of the
+new webpages. Instructions on how to implement the functionalities required by each page
+are provided as appendices to this document. Other appendices provide information on
+Globus APIs and concepts, data models, and more.
