--- a/main.tex
+++ b/main.tex
@@ -7,11 +7,8 @@
 \maketitle
 \tableofcontents
 
-\chapter{Summary}
-\input{chapter_summary.tex}
-
-\chapter{Globus APIs and concepts}
-\input{chapter_globus_apis.tex}
+\chapter{Introduction}
+\input{chapter_introduction.tex}
 
 \chapter{Movies page}
 \input{chapter_movies.tex}
@@ -27,7 +24,8 @@
 
 \appendix
 
-\chapter{The Files table}
+\chapter{Globus APIs and concepts}
+\input{chapter_globus_apis.tex}
 
 \chapter{Globus API endpoints\label{appendix:globusapis}}
 \input{appendix_globus_apis.tex}
