--- a/main.tex
+++ b/main.tex
@@ -8,34 +8,33 @@
 \tableofcontents
 
 \chapter{Introduction}
-\input{chapter_introduction.tex}
+\input{chapter/introduction.tex}
 
 \chapter{Movies page}
-\input{chapter_movies.tex}
+\input{chapter/movies.tex}
 
 \chapter{Active Transfers page}
-\input{chapter_active_transfers.tex}
+\input{chapter/active_transfers.tex}
 
 \chapter{Users page}
-\input{chapter_users.tex}
+\input{chapter/users.tex}
 
 \chapter{Backup Devices page}
-\input{chapter_backup_devices.tex}
+\input{chapter/backup_devices.tex}
 
 \appendix
 
 \chapter{Globus APIs and concepts}
-\input{chapter_globus_apis.tex}
+\input{appendix/globus_apis.tex}
 
 \chapter{Globus API endpoints\label{appendix:globusapis}}
-\input{appendix_globus_apis.tex}
+\input{appendix/globus_api_endpoints.tex}
 
 \chapter{Data models}
-\input{appendix_models.tex}
+\input{appendix/models.tex}
 
 \chapter{Globus Search queries}
 \section{Basic querying}
 \section{Complex queries}
-
 
 \end{document}
