--- a/table/movie_action_availabilities.tex
+++ b/table/movie_action_availabilities.tex
@@ -1,11 +1,11 @@
 \begin{tabularx}{\textwidth}{l|X}
 \hline
- Action Name   & Available When                          \\
+ Action Name   & Available When                               \\
 \hline
- Share     & \texttt{movie.is\_online() = true}           \\
- Unshare   & Access rule exists which applies to movie   \\
- Download  & \texttt{movie.is\_online() = true}           \\
- Upload    & \texttt{movie.is\_online() = false}          \\
- Remove    & \texttt{movie.is\_online() = true}           \\
+ Share         & \texttt{movie.is\_online() = true}           \\
+ Unshare       & Access rule exists which applies to movie    \\
+ Download      & \texttt{movie.is\_online() = true}           \\
+ Upload        & \texttt{movie.is\_online() = false}          \\
+ Create Backup & \texttt{movie.is\_online() = true}, frontend has identified at least one backup device \\ 
 \hline
 \end{tabularx}
