--- a/table/movie_model.tex
+++ b/table/movie_model.tex
@@ -4,6 +4,7 @@
 \hline
  \texttt{movie\_id}        & The movie ID                                                    \\
  \texttt{run\_id}          & The run ID                                                      \\
+ \texttt{dataset\_id}      & The ID by which the movie file(s) are known in SMRT Link        \\
  \texttt{date\_str}        & The time at which the movie was created                         \\
  \texttt{user\_name}       & The name of user who submitted the movie                        \\
  \texttt{instrument\_name} & ``Sequel II'' or ``Revio''                                      \\
@@ -11,5 +12,6 @@
  \texttt{sample\_name}     & The name of the sample                                          \\
  \texttt{num\_shares}      & The number of access rules granting access to this movie's path \\
  \texttt{num\_analyses}    & The number of analyses associated with this movie               \\
+ \texttt{backup\_device}   & The name of the backup device, if any, else ``None''            \\
 \hline
 \end{tabularx}
