--- a/table/movie_table_details.tex
+++ b/table/movie_table_details.tex
@@ -4,6 +4,7 @@
 \midrule
  Movie Id      & \texttt{movie\_id}        & n/a                                     \\
  Run Id        & \texttt{run\_id}          & Movies On Run \texttt{run\_id}                    \\
+ Dataset Id    & \texttt{dataset\_id}      & n/a                                     \\
  Date          & \texttt{date\_str}        & n/a                                     \\
  Submitted By  & \texttt{user\_name}       & n/a                                     \\
  Instrument    & \texttt{instrument\_name} & n/a                                     \\
