--- a/table/user_model.tex
+++ b/table/user_model.tex
@@ -1,13 +1,13 @@
 \begin{tabularx}{\textwidth}{l|X}
 \hline
- Property Name     & Description                                       \\
+ Property Name     & Description                                                   \\
 \hline
- \texttt{user\_name}         & String of alphabetic and spaces                   \\
- \texttt{latest\_movie\_date} & Date of latest movie                              \\
- \texttt{latest\_movie\_id}   & ID of latest movie                                \\
- \texttt{num\_movies}        & Number of movies sequenced for this user all time \\
- \texttt{num\_sharing}       & Number of movies currently sharing via Globus     \\
- \texttt{user\_email}        & Email address of user                             \\
- \texttt{globus\_id}         & Globus ID of user                                 \\
+ \texttt{user\_name}         & String of alphabetic and spaces                               \\
+ \texttt{latest\_movie\_date} & Date of latest movie, or some default string if no movies yet \\
+ \texttt{latest\_movie\_id}   & ID of latest movie                                            \\
+ \texttt{num\_movies}        & Number of movies sequenced for this user all time             \\
+ \texttt{num\_sharing}       & Number of movies currently sharing via Globus                 \\
+ \texttt{user\_email}        & Email address of user                                         \\
+ \texttt{globus\_id}         & Globus ID of user                                             \\
 \hline
 \end{tabularx}
