Change of plans: adapt existing users database

--- a/table/user_table_details.tex
+++ b/table/user_table_details.tex
@@ -1,12 +1,10 @@
 \begin{tabularx}{\textwidth}{l|l|X}
 \toprule
- Column Name      & Property Name     & Pop-up Window                \\
+ Column Name    & Property Name   & Pop-up Window                \\
 \midrule
- Name             & \texttt{user\_name}         & n/a                          \\
- Last Movie       & \texttt{latest\_movie\_date} & Movie Details                \\
- Movies Sequenced & \texttt{num\_movies}        & n/a                          \\
- Movies Sharing   & \texttt{num\_sharing}       & Movies Shared With \texttt{user\_name} \\
- Email            & \texttt{user\_email}        & n/a                          \\
- Globus Id        & \texttt{globus\_id}         & n/a                          \\
+ Last Run       & \texttt{latest\_run\_date} & Movie Details                \\
+ Runs           & \texttt{num\_runs}        & n/a                          \\
+ Movies Sharing & \texttt{num\_sharing}     & Movies Shared With User\_Name \\
+ Globus Id      & \texttt{globus\_id}       & n/a                          \\
 \bottomrule
 \end{tabularx}
