--- a/main.tex
+++ b/main.tex
@@ -16,8 +16,8 @@
 \chapter{Active Transfers page}
 \input{chapter/active_transfers.tex}
 
-\chapter{Backup Devices page}
-\input{chapter/backup_devices.tex}
+\chapter{Backups page}
+\input{chapter/backups.tex}
 
 \chapter{Users page}
 \input{chapter/users.tex}
