Fix internal link

--- a/appendix/globus_apis.tex
+++ b/appendix/globus_apis.tex
@@ -21,7 +21,7 @@ to be transferred to a Globus collection on a DNASC PC (or the opposite directio
 It may be useful if the DNASC website could \linkglobusbrowseendpoint{redirect} the user 
 to the Globus web app.
 
-\section{Task management}
+\section{Task management\label{appendix:globusapis:taskmanagement}}
 From the \linkglobustaskmonitoring{documentation}, ``Transfer and delete are asynchronous 
 operations, and result in a background task being created. The task id is returned from 
 successful submission, and can be used to monitor the progress of the task''. Task 
