--- a/appendix/models.tex
+++ b/appendix/models.tex
@@ -29,7 +29,7 @@ out for transferring a directory.
 
 \subsection{\texttt{transfer\_task}}
 A \texttt{transfer\_task} object is based on values found in a \linkglobustaskdocument
-{Task document} obtained using \linkinternaltaskmanagement{this} Globus API 
+{Task document} obtained using \hyperref{appendix:globusapis:taskmanagement}{this} Globus API 
 described in Appendix \ref{appendix:globusapis}.
 
 \begin{table}[h] % Placement options: h (here), t (top), b (bottom), p (page)
