Kick off section on filtered dir listing

--- a/appendix/frontend_functions.tex
+++ b/appendix/frontend_functions.tex
@@ -3,3 +3,9 @@
 \section{How to submit a transfer task}
 \input{section/submit_transfer_task.tex}
 
+\section{How to identify backup devices on an endpoint\label{appendix:identifybackupdevices}}
+
+Identify backup devices on an endpoint by querying the transfer API
+using a filter rule that causes only the cookie files of backup devices
+to be returned. See \linkglobusdirlistingfiltering{this link} for info
+on how to use filter rules on a directory listing.
