--- a/links.tex
+++ b/links.tex
@@ -1,4 +1,3 @@
-% web links
 \newcommand{\linklsdnasc}[1]{\href{https://lsdnasc.byu.edu}{\uline{#1}}}
 \newcommand{\linkglobus}[1]{\href{https://www.globus.org}{\uline{#1}}}
 \newcommand{\linkglobusfilelisting}[1]{\href{https://docs.globus.org/api/transfer/file\_operations/\#list\_directory\_contents}{\uline{#1}}}
@@ -15,6 +14,4 @@
 \newcommand{\linkglobuscanceltaskbyid}[1]{\href{https://docs.globus.org/api/transfer/task/\#cancel\_task\_by\_id}{\uline{#1}}}
 \newcommand{\linkglobusgettasklist}[1]{\href{https://docs.globus.org/api/transfer/task/\#get\_task\_list}{\uline{#1}}}
 \newcommand{\linkglobusbrowseendpoint}[1]{\href{https://docs.globus.org/api/helper-pages/browse-endpoint}{\uline{#1}}}
-
-% internal links
-\newcommand{\linkinternaltaskmanagement}[1]{\hyperref[section:taskmanagement]{\uline{#1}}}
+\newcommand{\linkglobusdirlistingfiltering}[1]{\href{https://docs.globus.org/api/transfer/file\_operations/\#dir\_listing\_filtering}{\uline{#1}}}
