--- a/links.tex
+++ b/links.tex
@@ -1,17 +1,17 @@
-\newcommand{\linklsdnasc}[1]{\href{https://lsdnasc.byu.edu}{\uline{#1}}}
-\newcommand{\linkglobus}[1]{\href{https://www.globus.org}{\uline{#1}}}
-\newcommand{\linkglobusfilelisting}[1]{\href{https://docs.globus.org/api/transfer/file\_operations/\#list\_directory\_contents}{\uline{#1}}}
-\newcommand{\linkglobusindex}[1]{\href{https://docs.globus.org/api/search/overview/\#search\_indices}{\uline{#1}}}
-\newcommand{\linkglobustransfer}[1]{\href{https://docs.globus.org/api/transfer/}{\uline{#1}}}
-\newcommand{\linkglobussearch}[1]{\href{https://docs.globus.org/api/search/}{\uline{#1}}}
-\newcommand{\linkglobustaskmonitoring}[1]{\href{https://docs.globus.org/api/transfer/task/}{\uline{#1}}}
-\newcommand{\linkglobustransferitem}[1]{\href{https://docs.globus.org/api/transfer/task\_submit/\#transfer\_item\_fields}{\uline{#1}}}
-\newcommand{\linkglobustransferrecursive}[1]{\href{https://docs.globus.org/api/transfer/task\_submit/\#recursive\_directory}{\uline{#1}}}
-\newcommand{\linkglobusfilterrules}[1]{\href{https://docs.globus.org/api/transfer/task\_submit/\#filter\_rules}{\uline{#1}}}
-\newcommand{\linkglobustaskdocument}[1]{\href{https://docs.globus.org/api/transfer/task/\#task\_document}{\uline{#1}}}
-\newcommand{\linkglobuslistaccessrules}[1]{\href{https://docs.globus.org/api/transfer/acl/\#rest\_access\_get\_list}{\uline{#1}}}
-\newcommand{\linkglobusgettaskbyid}[1]{\href{https://docs.globus.org/api/transfer/task/\#get\_task\_by\_id}{\uline{#1}}}
-\newcommand{\linkglobuscanceltaskbyid}[1]{\href{https://docs.globus.org/api/transfer/task/\#cancel\_task\_by\_id}{\uline{#1}}}
-\newcommand{\linkglobusgettasklist}[1]{\href{https://docs.globus.org/api/transfer/task/\#get\_task\_list}{\uline{#1}}}
-\newcommand{\linkglobusbrowseendpoint}[1]{\href{https://docs.globus.org/api/helper-pages/browse-endpoint}{\uline{#1}}}
-\newcommand{\linkglobusdirlistingfiltering}[1]{\href{https://docs.globus.org/api/transfer/file\_operations/\#dir\_listing\_filtering}{\uline{#1}}}
+\newcommand{\linklsdnasc}[1]{\href{https://lsdnasc.byu.edu}{#1}}
+\newcommand{\linkglobus}[1]{\href{https://www.globus.org}{#1}}
+\newcommand{\linkglobusfilelisting}[1]{\href{https://docs.globus.org/api/transfer/file\_operations/\#list\_directory\_contents}{#1}}
+\newcommand{\linkglobusindex}[1]{\href{https://docs.globus.org/api/search/overview/\#search\_indices}{#1}}
+\newcommand{\linkglobustransfer}[1]{\href{https://docs.globus.org/api/transfer/}{#1}}
+\newcommand{\linkglobussearch}[1]{\href{https://docs.globus.org/api/search/}{#1}}
+\newcommand{\linkglobustaskmonitoring}[1]{\href{https://docs.globus.org/api/transfer/task/}{#1}}
+\newcommand{\linkglobustransferitem}[1]{\href{https://docs.globus.org/api/transfer/task\_submit/\#transfer\_item\_fields}{#1}}
+\newcommand{\linkglobustransferrecursive}[1]{\href{https://docs.globus.org/api/transfer/task\_submit/\#recursive\_directory}{#1}}
+\newcommand{\linkglobusfilterrules}[1]{\href{https://docs.globus.org/api/transfer/task\_submit/\#filter\_rules}{#1}}
+\newcommand{\linkglobustaskdocument}[1]{\href{https://docs.globus.org/api/transfer/task/\#task\_document}{#1}}
+\newcommand{\linkglobuslistaccessrules}[1]{\href{https://docs.globus.org/api/transfer/acl/\#rest\_access\_get\_list}{#1}}
+\newcommand{\linkglobusgettaskbyid}[1]{\href{https://docs.globus.org/api/transfer/task/\#get\_task\_by\_id}{#1}}
+\newcommand{\linkglobuscanceltaskbyid}[1]{\href{https://docs.globus.org/api/transfer/task/\#cancel\_task\_by\_id}{#1}}
+\newcommand{\linkglobusgettasklist}[1]{\href{https://docs.globus.org/api/transfer/task/\#get\_task\_list}{#1}}
+\newcommand{\linkglobusbrowseendpoint}[1]{\href{https://docs.globus.org/api/helper-pages/browse-endpoint}{#1}}
+\newcommand{\linkglobusdirlistingfiltering}[1]{\href{https://docs.globus.org/api/transfer/file\_operations/\#dir\_listing\_filtering}{#1}}
