Start reorienting toward single page

--- a/table/movie_table_details.tex
+++ b/table/movie_table_details.tex
@@ -1,17 +1,12 @@
 \begin{tabularx}{\textwidth}{l|l|X}
 \toprule
- Column Name   & Property Name   & Pop-up Window                           \\
+ Column Name       & Property Name   & Pop-up Window             \\
 \midrule
- Movie Id      & \texttt{movie\_id}        & n/a                                     \\
- Run Id        & \texttt{run\_id}          & Movies On Run \texttt{run\_id}                    \\
- Dataset Id    & \texttt{dataset\_id}      & n/a                                     \\
- Date          & \texttt{date\_str}        & n/a                                     \\
- Submitted By  & \texttt{user\_name}       & n/a                                     \\
- Instrument    & \texttt{instrument\_name} & n/a                                     \\
- Sample Type   & \texttt{sample\_type}     & n/a                                     \\
- Sample Name   & \texttt{sample\_name}     & n/a                                     \\
- Shares        & \texttt{num\_shares}      & Users With Access To Movie \texttt{movie\_id}     \\
- Analyses      & \texttt{num\_analyses}    & Analyses Associated With Movie \texttt{movie\_id} \\
- Backup Device & \texttt{backup\_device}   & n/a                                     \\
+ Movie             & \texttt{movie\_id}        & Movie \texttt{movie\_id} Details    \\
+ Date              & \texttt{date\_str}        & n/a                       \\
+ Submitted By      & \texttt{user\_name}       & n/a                       \\
+ Sample Name       & \texttt{sample\_name}     & n/a                       \\
+ Users With Access & \texttt{num\_shares}      & Sharing Of Movie \texttt{movie\_id} \\
+ Backup            & \texttt{backup\_device}   & Back Up Movie \texttt{movie\_id}    \\
 \bottomrule
 \end{tabularx}
