Reorient more chapters toward single webpage

--- a/main.tex
+++ b/main.tex
@@ -10,16 +10,22 @@
 \chapter{Introduction}
 \input{chapter/introduction.tex}
 
-\chapter{Movies page}
+\chapter{Movies Page}
 \input{chapter/movies.tex}
 
-\chapter{Active Transfers page}
-\input{chapter/active_transfers.tex}
+%\chapter{Active Transfers page}
+%\input{chapter/active_transfers.tex}
 
-\chapter{Backups page}
+\chapter{Movie Details Pop-up}
+\input{chapter/movie_details.tex}
+
+\chapter{Sharing Pop-up}
+\input{chapter/sharing.tex}
+
+\chapter{Backup Pop-up}
 \input{chapter/backups.tex}
 
-\chapter{Users page}
+\chapter{Users}
 \input{chapter/users.tex}
 
 \appendix
@@ -36,5 +42,8 @@
 \chapter{Globus Search queries}
 \section{Basic querying}
 \section{Complex queries}
+
+\chapter{Frontend functions}
+\input{appendix/frontend_functions.tex}
 
 \end{document}
