Split register backup device into its own chapter

--- a/main.tex
+++ b/main.tex
@@ -25,6 +25,9 @@
 \chapter{Backup Pop-up}
 \input{chapter/backups.tex}
 
+\chapter{Register Backup Device Pop-up\label{chapter:registerbackupdevice}}
+\input{chapter/register_backup_device.tex}
+
 \chapter{Users}
 \input{chapter/users.tex}
 
