--- a/table/movie_model.tex
+++ b/table/movie_model.tex
@@ -5,7 +5,7 @@
  \texttt{movie\_id}        & The movie ID                                                    \\
  \texttt{run\_id}          & The run ID                                                      \\
  \texttt{dataset\_id}      & The ID by which the movie file(s) are known in SMRT Link        \\
- \texttt{date\_str}        & The time at which the movie was created                         \\
+ \texttt{date\_run}        & The start time of the run which included this movie             \\
  \texttt{user\_name}       & The name of user who submitted the movie                        \\
  \texttt{instrument\_name} & ``Sequel II'' or ``Revio''                                      \\
  \texttt{sample\_type}     & ``HiFi'' (default), ``Iso-Seq'', ``MAS-Seq'', or ``Amplicons''  \\
@@ -13,5 +13,7 @@
  \texttt{num\_shares}      & The number of access rules granting access to this movie's path \\
  \texttt{num\_analyses}    & The number of analyses associated with this movie               \\
  \texttt{backup\_device}   & The name of the backup device, if any, else ``None''            \\
+ \texttt{backup\_date}     & The date on which the movie was backed up, if any, else ``n/a'' \\
+ \texttt{is\_online}       & Whether or not movie is available in Globus (``Yes'' or ``No'') \\
 \hline
 \end{tabularx}
