Reorganize appendices, write script to generate

--- a/main.tex
+++ b/main.tex
@@ -32,21 +32,6 @@
 \input{chapter/users.tex}
 
 \appendix
-
-\chapter{Globus APIs and concepts}
-\input{appendix/globus_apis.tex}
-
-\chapter{Globus API endpoints\label{appendix:globusapis}}
-\input{appendix/globus_api_endpoints.tex}
-
-\chapter{Data models}
-\input{appendix/models.tex}
-
-\chapter{Globus Search queries}
-\section{Basic querying}
-\section{Complex queries}
-
-\chapter{Frontend functions}
-\input{appendix/frontend_functions.tex}
+\input{appendices.tex}
 
 \end{document}
