Improve organization and parallel structure

--- a/appendix/share_movie.tex
+++ b/appendix/share_movie.tex
@@ -1,5 +1,10 @@
 % appendix: how to s
 
+First, get an \hyperref[section:updatingcollectionaccessrules]{up-to-date list of access rules} 
+to determine which users have access to this movie. Then, use this information to filter out the 
+appropriate \texttt{user} records.
+
+
 
 To accomplish this, post an access rule object to \texttt{/endpoint/endpoint\_xid/access}. The access rule 
 needs to include the following:
