Redesign device registration (incomplete)

--- a/appendix/backup_device_discovery.tex
+++ b/appendix/backup_device_discovery.tex
@@ -1,6 +1,6 @@
-% appendix: identify backup devices
+% appendix: backup device discovery
 
-\section{How to identify backup devices on an endpoint\label{appendix:identifybackupdevices}}
+\section{How to discover backup devices on an endpoint\label{appendix:identifybackupdevices}}
 
 Identify backup devices on an endpoint by querying the transfer API
 using a filter rule that causes only the cookie files of backup devices
