--- a/appendix/backup_device_registration.tex
+++ b/appendix/backup_device_registration.tex
@@ -12,9 +12,10 @@ collection name and the collection owner. The JSON response from the Globus
 API should be parsed to extract the collection name, owner, and endpoint
 id. \linkglobusendpointsearch{Link to API documentation for searching collections}.
 
-\subsection{Selecting a path using the Globus ``Browse Endpoint'' helper page}
 
-Globus provides a ``helper page'' for selecting a path on an Globus collection.
+\subsection{Populating the backup device dropdown menu}
+
+\subsection{Populating the favorite collections dropdown menu}
 
 There is a dedicated pop-up window for registering backup devices. It functions
 to collection information from the user about a storage device and its location,
