--- a/main.tex
+++ b/main.tex
@@ -5,8 +5,11 @@
 \begin{document}
 
 \maketitle
+\pagenumbering{roman}
 \tableofcontents
 
+\clearpage
+\pagenumbering{arabic}
 \chapter{Introduction}
 \input{chapter/introduction.tex}
 
