--- a/appendices.tex
+++ b/appendices.tex
@@ -2,12 +2,14 @@
 \input{appendix/globus_apis.tex}
 \chapter{Backup Device Registration\label{appendix:backupdeviceregistration}}
 \input{appendix/backup_device_registration.tex}
-\chapter{Identify Backup Devices\label{appendix:identifybackupdevices}}
-\input{appendix/identify_backup_devices.tex}
+\chapter{Browse Endpoint Helper Page\label{appendix:browseendpointhelperpage}}
+\input{appendix/browse_endpoint_helper_page.tex}
 \chapter{Create Backup\label{appendix:createbackup}}
 \input{appendix/create_backup.tex}
 \chapter{Share Movie\label{appendix:sharemovie}}
 \input{appendix/share_movie.tex}
+\chapter{Backup Device Discovery\label{appendix:backupdevicediscovery}}
+\input{appendix/backup_device_discovery.tex}
 \chapter{Globus Api Endpoints\label{appendix:globusapiendpoints}}
 \input{appendix/globus_api_endpoints.tex}
 \chapter{Models\label{appendix:models}}
